Add missing MTConnect data items: rotary axes, extended offsets, counter details, alarm fields
- Add rotary axes (A, B, C) for G54-G59 work offsets (18 data items)
- Add extended work offsets X01-X10 (30 data items)
- Add counter end signals and status (8 data items)
- Add alarm program, block, and severity fields (3 data items)
- Update MTConnectServer to expose all parsed data from FileLoader
- Create controller_times component for timing and alarm data

--- a/BrotherConnection/BrotherConnection.csproj
+++ b/BrotherConnection/BrotherConnection.csproj
@@ -48,6 +48,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FileLoader.cs" />
     <Compile Include="Mapping\DataMap.cs" />
     <Compile Include="Mapping\EnumValue.cs" />
     <Compile Include="Mapping\Item.cs" />
