Add path filters to workflow to skip builds on documentation-only changes
Only trigger Docker builds when:
- Code changes in BrotherConnection/
- Dockerfile changes
- Workflow file changes

This prevents unnecessary builds for README, LICENSE, and other documentation updates.

--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -7,10 +7,18 @@ on:
       - master
     tags:
       - 'v*'
+    paths:
+      - 'BrotherConnection/**'
+      - 'Dockerfile'
+      - '.github/workflows/build-and-publish.yml'
   pull_request:
     branches:
       - main
       - master
+    paths:
+      - 'BrotherConnection/**'
+      - 'Dockerfile'
+      - '.github/workflows/build-and-publish.yml'
   workflow_dispatch:
 
 env:
