Enhance CI workflows and Dockerfile
- Added concurrency settings to GitHub Actions workflows for build-and-publish and validate-schemas to manage simultaneous runs.
- Updated validate-schemas workflow to install NuGet separately and use mono for package restoration.
- Modified Dockerfile to install NuGet and mono-complete, ensuring NuGet is downloaded and executable for package restoration.

--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -21,6 +21,10 @@ on:
       - '.github/workflows/build-and-publish.yml'
   workflow_dispatch:
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
