--- a/.github/workflows/validate-schemas.yml
+++ b/.github/workflows/validate-schemas.yml
@@ -39,23 +39,35 @@ jobs:
           sudo mv nuget.exe /usr/local/bin/
 
       - name: Setup MSBuild
+        id: msbuild_setup
         run: |
-          # Find MSBuild.dll
+          # Find MSBuild.dll and its directory
           MSBUILD_DLL=$(find /usr/lib/mono -name "MSBuild.dll" 2>/dev/null | head -1)
           if [ -z "$MSBUILD_DLL" ]; then
             echo "MSBuild.dll not found, attempting to locate..."
             MSBUILD_DLL="/usr/lib/mono/msbuild/15.0/bin/MSBuild.dll"
           fi
+          MSBUILD_DIR=$(dirname "$MSBUILD_DLL")
           
-          # Create a wrapper script for msbuild
+          # Export MSBuild info for later use
+          echo "MSBUILD_DIR=$MSBUILD_DIR" >> $GITHUB_ENV
+          echo "MSBUILD_DLL=$MSBUILD_DLL" >> $GITHUB_ENV
+          echo "MSBuild directory: $MSBUILD_DIR"
+          echo "MSBuild DLL: $MSBUILD_DLL"
+
+      - name: Restore NuGet packages
+        run: |
+          # Restore packages directly from packages.config (doesn't require MSBuild)
+          # This avoids MSBuild auto-detection issues
+          cd BrotherConnection && \
+          mono /usr/local/bin/nuget.exe install packages.config -OutputDirectory ../packages -NonInteractive
+
+      - name: Setup MSBuild wrapper for build
+        run: |
+          # Create wrapper script now that NuGet restore is done
           echo "#!/bin/bash" | sudo tee /usr/local/bin/msbuild
           echo "mono \"$MSBUILD_DLL\" \"\$@\"" | sudo tee -a /usr/local/bin/msbuild
           sudo chmod +x /usr/local/bin/msbuild
-          echo "MSBuild wrapper created pointing to: $MSBUILD_DLL"
-
-      - name: Restore NuGet packages
-        working-directory: BrotherConnection
-        run: mono /usr/local/bin/nuget.exe restore ../BrotherConnection.sln -NonInteractive
 
       - name: Build project
         working-directory: BrotherConnection
