--- a/.github/workflows/validate-schemas.yml
+++ b/.github/workflows/validate-schemas.yml
@@ -38,10 +38,24 @@ jobs:
           chmod +x nuget.exe
           sudo mv nuget.exe /usr/local/bin/
 
+      - name: Restore NuGet packages
+        run: |
+          # Use nuget install with explicit output directory
+          # This should work without MSBuild detection
+          cd BrotherConnection && \
+          mono /usr/local/bin/nuget.exe install packages.config -OutputDirectory ../packages -NonInteractive -NoCache || \
+          (echo "NuGet install failed, trying manual download..." && \
+           cd .. && \
+           mkdir -p packages/Newtonsoft.Json.10.0.3/lib/net45 && \
+           curl -L https://www.nuget.org/api/v2/package/Newtonsoft.Json/10.0.3 -o /tmp/newtonsoft.nupkg && \
+           unzip -q /tmp/newtonsoft.nupkg -d /tmp/newtonsoft && \
+           cp /tmp/newtonsoft/lib/net45/Newtonsoft.Json.dll packages/Newtonsoft.Json.10.0.3/lib/net45/ && \
+           rm -rf /tmp/newtonsoft /tmp/newtonsoft.nupkg)
+
       - name: Setup MSBuild
         id: msbuild_setup
         run: |
-          # Find MSBuild.dll and its directory
+          # Find MSBuild.dll and its directory (after restore to avoid detection issues)
           MSBUILD_DLL=$(find /usr/lib/mono -name "MSBuild.dll" 2>/dev/null | head -1)
           if [ -z "$MSBUILD_DLL" ]; then
             echo "MSBuild.dll not found, attempting to locate..."
@@ -54,13 +68,6 @@ jobs:
           echo "MSBUILD_DLL=$MSBUILD_DLL" >> $GITHUB_ENV
           echo "MSBuild directory: $MSBUILD_DIR"
           echo "MSBuild DLL: $MSBUILD_DLL"
-
-      - name: Restore NuGet packages
-        run: |
-          # Restore packages directly from packages.config (doesn't require MSBuild)
-          # This avoids MSBuild auto-detection issues
-          cd BrotherConnection && \
-          mono /usr/local/bin/nuget.exe install packages.config -OutputDirectory ../packages -NonInteractive
 
       - name: Setup MSBuild wrapper for build
         run: |
