--- a/BrotherConnection/BrotherConnection.csproj
+++ b/BrotherConnection/BrotherConnection.csproj
@@ -63,8 +63,11 @@
     <Compile Include="XmlValidator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Request.cs" />
+    <Compile Include="Schema\AtctlSchemaConfig.cs" />
     <Compile Include="Schema\FileSchemaConfig.cs" />
+    <Compile Include="Schema\MacroSchemaConfig.cs" />
     <Compile Include="Schema\PosnSchemaConfig.cs" />
+    <Compile Include="Schema\TolniSchemaConfig.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
